--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/http-status": "^1.1.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
@@ -41,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.59.11",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
@@ -51,6 +53,7 @@
     "latest": "^0.2.0",
     "lint-staged": "^13.2.2",
     "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.21.4"
   }
 }
